--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@
 }
 .cont{
     width: 50%;
-    height: 90vh;
+    height: 95vh;
     background: linear-gradient(to bottom, #0066ff 28%, #ffffff 100%);
-    padding: 1rem;
+    padding: .5rem;
     border-radius: 1rem;
     border: 1px solid black;
     box-shadow: 5px 5px 3px gray;
@@ -22,16 +22,53 @@
     justify-content:center;
     align-items: center;
     flex-direction: column;
+    gap: .6rem;
 }
 .cont h1{
     font-family: 'Vollkorn SC', serif;
     text-align: center;
     font-size: 3rem;
-    position:fixed;
-    top: 1.5rem;
+   
 }
 .search{
     width: 80%;
-    height: 30vh;
+    height: 20vh;
+    padding: .4rem;
     background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 1rem;
+    box-shadow: 2.5px 2.5px 3px rgb(208, 207, 207);
+}
+.todo{
+    width: 80%;
+    height: 55vh;
+    padding: .4rem;
+    background-color: #ffffff;
+    border-radius: 1rem;
+    box-shadow: 2.5px 2.5px 3px rgb(208, 207, 207);
+
+}
+.search .sea input{
+    width:50vh;
+    font-size: 1.5rem;
+        padding: 2px;
+    padding-top:.5rem ;
+    padding-bottom: .5rem;    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: .5rem;
+
+}
+.search .but button{
+    padding: .5rem;
+    font-size: large;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: .5rem;
+    border: none;
+    color: #ffffff;
+    background-color:orangered;
 }
