--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     width: 80%;
     height: 20vh;
     padding: .4rem;
-    background-color: #ffffff;
+    background-color:rgb(239, 238, 237);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,7 +47,7 @@
     width: 80%;
     height: 55vh;
     padding: .4rem;
-    background-color: #ffffff;
+    background-color:rgb(241, 241, 241);
     border-radius: 1rem;
     box-shadow: 2.5px 2.5px 3px rgb(208, 207, 207);
 
@@ -70,5 +70,42 @@
     border-radius: .5rem;
     border: none;
     color: #ffffff;
-    background-color:orangered;
+    background-color:rgb(253, 88, 29);
+}
+.search .but button:hover{
+    background-color:rgb(233, 129, 92);
+}
+.todo h2{
+    margin: 1rem;
+}
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: .5rem;
+    width: 100%;
+    height: 82%;
+    overflow: hidden;
+}
+.main .hii{
+    width: 95%;
+    height: 20%;
+    background-color: rgb(218, 211, 247);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: larger;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: 1rem;
+    
+
+    
+}
+.main .task{
+    width: 98%;
+    height: 20%;
+    border: 1px solid black;
+    background-color:#ffffff;
 }
